[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/Mecha-stone Golem 0.1/weapon PNG/arm_projectile_glowing.png" type="Texture" id=1]
[ext_resource path="res://rocks.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 2 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 14.0
height = 32.0

[node name="Rocks" type="Area2D" groups=["Assest", "damagable"]]
script = ExtResource( 2 )

[node name="Rocks" type="AnimatedSprite" parent="."]
position = Vector2( 1005, 167 )
scale = Vector2( 2.28, 3.13 )
frames = SubResource( 7 )
frame = 2
playing = true
flip_h = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 945, 126 )
rotation = 1.57079
scale = Vector2( 0.998641, 3.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 939, 126 )
rotation = 1.57079
shape = SubResource( 8 )

[connection signal="area_entered" from="." to="." method="_on_Rocks_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Rocks_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
